Lite mockup ändringar
Har lag till en logga i menyn och la till en dropdown meny där det står
vem som är inloggad

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,3 +3,10 @@ body {
 	background-color: #dddddd;
 
 }
+
+.navbar-brand{
+	padding: 0px;
+	padding-top: 6px;
+	padding-left: 6px;
+	padding-right: 6px;
+}
