--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -43,3 +43,9 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
